<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container">
        <item
            android:id="@+id/menu1"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorite_menu"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/menu2"
            android:title="@string/setting"
            android:icon="@drawable/ic_settings"
            app:showAsAction="always" />
    </group>
</menu>